Spec 23219: Add module properties for description - add more module descriptions

--- a/audit/module.properties
+++ b/audit/module.properties
@@ -1,2 +1,8 @@
 ModuleClass: org.labkey.audit.AuditModule
 ModuleDependencies: Experiment
+Label: Audit Log Service
+Maintainer: Karl Lum <klum@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
