--- a/authentication/module.properties
+++ b/authentication/module.properties
@@ -1,1 +1,11 @@
 ModuleClass: org.labkey.authentication.AuthenticationModule
+Label: Authentication Service
+Description: User authentication service either through LabKey Server's \
+    core authentication system or through an external authentication system \
+    such as LDAP, CAS single sign-on protocol, or Duo two-factor authentication.
+URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=authenticationModule
+Maintainer: Adam Rauch <adamr@labkey.com>, Matthew Bellew <matthewb@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
