--- a/bigiron/module.properties
+++ b/bigiron/module.properties
@@ -1,1 +1,10 @@
 ModuleClass: org.labkey.bigiron.BigIronModule
+Label: Additional Database Support
+Description: Support for using Microsoft SQLServer as LabKey Server's \
+    backend database and allows connecting to Oracle, SAS, and MySQL \
+    as an external data source.
+Maintainer: Adam Rauch <adamr@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
