--- a/dataintegration/module.properties
+++ b/dataintegration/module.properties
@@ -1,3 +1,8 @@
 ModuleClass: org.labkey.di.DataIntegrationModule
 ModuleDependencies=Pipeline, Experiment
-
+Label: Extract Tranform Load (ETL) Service
+Maintainer: Tony Galuhn <tgaluhn@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
