--- a/experiment/module.properties
+++ b/experiment/module.properties
@@ -1,2 +1,14 @@
 ModuleClass: org.labkey.experiment.ExperimentModule
 ModuleDependencies: Pipeline
+Label: Experiment Service
+Description: The Experiment module provides annotation of experiments \
+    based on FuGE-OM standards. This module defines the XAR (eXperimental \
+    ARchive) file format for importing and exporting experiment data and \
+    annotations, and allows user-defined custom annotations for specialized \
+    protocols and data.
+URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=experiment
+Maintainer: Josh Eckels <jeckels@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
