--- a/filecontent/module.properties
+++ b/filecontent/module.properties
@@ -1,2 +1,10 @@
 ModuleClass: org.labkey.filecontent.FileContentModule
 ModuleDependencies: Experiment,Announcements
+Label: File Content Service
+Description: The FileContent module lets you to securely share files on your \
+    LabKey Server and via WebDAV.
+Maintainer: Nick Arnold <nicka@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
