--- a/freezerpro/module.properties
+++ b/freezerpro/module.properties
@@ -1,2 +1,10 @@
 ModuleClass: org.labkey.freezerpro.FreezerProModule
 ModuleDependencies: Study
+Label: FreezerPro Study Integration
+Description: Supports importation of data from FreezerPro into the specimen management system.
+URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=freezerpro
+Maintainer: Karl Lum <klum@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
