--- a/issues/module.properties
+++ b/issues/module.properties
@@ -1,2 +1,13 @@
 ModuleClass: org.labkey.issue.IssuesModule
 ModuleDependencies: Wiki
+Label: Issue Tracking Service
+Description: The LabKey Issues module provides an issue tracker, a \
+    centralized workflow system for tracking issues or tasks across the \
+    lifespan of a project. Users can use the issue tracker to assign tasks \
+    to themselves or others, and follow the task through the work process \
+    from start to completion.
+URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=issues
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
