--- a/list/module.properties
+++ b/list/module.properties
@@ -1,2 +1,16 @@
 ModuleClass: org.labkey.list.ListModule
 ModuleDependencies: Experiment
+Label: List Service
+Description: A List is a flexible, user-defined table that is defined \
+    and managed via the LabKey Server web UI. The schema of a list can be \
+    defined manually, created using the schema of another list as a template, \
+    or inferred from the contents of a data file. Lists can be linked via \
+    lookups and joins to create custom views that draw data from many sources. \
+    Populated lists can be exported and imported as archives for easy transfer \
+    between development, staging and production folders or servers.
+URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=lists
+Maintainer: Dave Bradlee <dave@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
