--- a/mothership/module.properties
+++ b/mothership/module.properties
@@ -1,1 +1,7 @@
 ModuleClass: org.labkey.mothership.MothershipModule
+Label: Exception Report Service
+Maintainer: Tony Galuhn <tgaluhn@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
