--- a/pipeline/module.properties
+++ b/pipeline/module.properties
@@ -1,1 +1,13 @@
 ModuleClass: org.labkey.pipeline.PipelineModule
+Label: Pipeline Service
+Description: The Data Pipeline module uploads experiment data files to \
+    LabKey Server. You can track the progress of uploads and view log and \
+    output files. These provide further details on the progress of data files \
+    through the pipeline, from file conversion to the final location of the \
+    analyzed runs.
+URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=pipeline
+Maintainer: Josh Eckels <jeckels@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
