--- a/redcap/module.properties
+++ b/redcap/module.properties
@@ -1,2 +1,13 @@
 ModuleClass: org.labkey.redcap.RedcapModule
 ModuleDependencies: Study
+Label: RedCap Survey Integration
+Description: LabKey Server can integrate data collected using REDCap online \
+    surveys and forms. Existing REDCap projects can be integrated by \
+    exporting them as LabKey study archive files, which you can import into \
+    LabKey Server.
+URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=redCap
+Maintainer: Karl Lum <klum@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
