--- a/search/module.properties
+++ b/search/module.properties
@@ -1,1 +1,9 @@
 ModuleClass: org.labkey.search.SearchModule
+Label: Search Service
+Description: The Search module offers full-text search of server contents, implemented by Lucene.
+URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=luceneSearch
+Maintainer: Matthew Bellew <matthewb@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
