--- a/study/module.properties
+++ b/study/module.properties
@@ -1,2 +1,10 @@
 ModuleClass: org.labkey.study.StudyModule
 ModuleDependencies: Experiment, Pipeline, Wiki, Query
+Label: Study and Assay Service
+Description: The Study module provides a variety of tools for integration of heterogeneous data types, such as demographic, clinical, and experimental data. Cohorts and participant groups are also supported by this module.
+URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=study
+Maintainer: Karl Lum <klum@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
