--- a/timeline/module.properties
+++ b/timeline/module.properties
@@ -1,1 +1,5 @@
 ModuleClass: org.labkey.timeline.TimelineModule
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
