--- a/visualization/module.properties
+++ b/visualization/module.properties
@@ -1,2 +1,10 @@
 ModuleClass: org.labkey.visualization.VisualizationModule
 ModuleDependencies: Query, Study, Pipeline
+Label: Visualization Service
+Description: Implements the core data visualization features, \
+    including box plots, scatter plots, and time charts.
+Maintainer: Cory Nathe <cnathe@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
