--- a/wiki/module.properties
+++ b/wiki/module.properties
@@ -1,1 +1,10 @@
 ModuleClass: org.labkey.wiki.WikiModule
+Label: Wiki Service
+Description: A wiki is a hierarchical collection of documents that multiple \
+    users can edit. Wiki pages can be written in HTML, plain text or a \
+    specialized wiki language.
+UR: https://www.labkey.org/wiki/home/Documentation/page.view?name=wiki
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
