--- a/cbcassay/module.properties
+++ b/cbcassay/module.properties
@@ -1,1 +1,7 @@
 ModuleClass: org.labkey.cbcassay.CBCAssayModule
+Label: Complete Blood Count Assay
+Maintainer: Kevin Krouse <kevink@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
