--- a/query/module.properties
+++ b/query/module.properties
@@ -1,1 +1,7 @@
 ModuleClass: org.labkey.query.QueryModule
+Label: Query Service
+Maintainer: Matthew Bellew <matthewb@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
