--- a/survey/module.properties
+++ b/survey/module.properties
@@ -1,3 +1,11 @@
 ModuleClass: org.labkey.survey.SurveyModule
 ModuleDependencies: Experiment
+Label: Survey Service
+Description: The Survey module supports custom user surveys for collecting \
+    user information, feedback, or participant data.
+URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=surveys
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
 
