Spec 23219: Add module properties for description - add "locked" pattern on setters to DefaultModule class - automated test to check for min set of properties for LabKey Software modules

--- a/core/module.properties
+++ b/core/module.properties
@@ -1,6 +1,10 @@
 Name: Core
 ModuleClass: org.labkey.core.CoreModule
 Version: 15.10
+Label: Administration and Essential Services
+Description: The Core module provides central services such as login, \
+    security, administration, folder management, user management, \
+    module upgrade, file attachments, analytics, and portal page management.
 Organization: LabKey Software
 OrganizationURL: https://www.labkey.com/
 License: Apache 2.0
