--- a/timeline/module.properties
+++ b/timeline/module.properties
@@ -1,4 +1,6 @@
 ModuleClass: org.labkey.timeline.TimelineModule
+Label: Timeline Visualization
+Description: Displays data from a query, list or dataset in a timeline format.
 Organization: LabKey Software
 OrganizationURL: https://www.labkey.com/
 License: Apache 2.0
