--- a/demo/module.properties
+++ b/demo/module.properties
@@ -1,8 +1,9 @@
 ModuleClass: org.labkey.demo.DemoModule
+Label: Demonstrates Creating a LabKey Module
 Description: The Demo module helps you get started building your own \
     LabKey Server module. It demonstrates all the basic concepts you need \
     to understand to extend LabKey Server with your own module.
-URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=demoModule
+URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=default
 Organization: LabKey Software
 OrganizationURL: https://www.labkey.com/
 License: Apache 2.0
