mpower survey iteration : date picker changes

--- a/.gitattributes
+++ b/.gitattributes
@@ -2802,8 +2802,10 @@ survey/src/org/labkey/survey/query/SurveysTable.java -text
 survey/src/org/labkey/survey/view/customizeSurveysWebPart.jsp -text
 survey/src/org/labkey/survey/view/surveyDesignWizard.jsp -text
 survey/src/org/labkey/survey/view/surveyWizard.jsp -text
+survey/webapp/survey.lib.xml -text
 survey/webapp/survey/AttachmentField.js -text
 survey/webapp/survey/BaseSurveyPanel.js -text
+survey/webapp/survey/DateCombo.js -text
 survey/webapp/survey/Survey.css -text
 survey/webapp/survey/SurveyDesign.css -text
 survey/webapp/survey/SurveyGridQuestion.js -text
