Issue 23394: attachment download actions should check the attachment parent entityid is of the right type - Move AttachmentDisplayColumn to API - Validate attachment parent is correct before downloading attachment

--- a/.gitattributes
+++ b/.gitattributes
@@ -225,6 +225,7 @@ api/src/org/labkey/api/data/Aggregate.java -text
 api/src/org/labkey/api/data/AggregateColumnInfo.java -text
 api/src/org/labkey/api/data/AsyncQueryRequest.java -text
 api/src/org/labkey/api/data/AtomicDatabaseInteger.java -text
+api/src/org/labkey/api/data/AttachmentDisplayColumn.java -text
 api/src/org/labkey/api/data/AttachmentParentEntity.java -text
 api/src/org/labkey/api/data/BaseSelector.java -text
 api/src/org/labkey/api/data/BaseSqlFactory.java -text
