--- a/.gitattributes
+++ b/.gitattributes
@@ -1394,6 +1394,7 @@ api/src/org/labkey/api/study/Cohort.java -text
 api/src/org/labkey/api/study/Dataset.java -text
 api/src/org/labkey/api/study/DatasetDB.java -text
 api/src/org/labkey/api/study/DatasetTable.java -text
+api/src/org/labkey/api/study/DataspaceContainerFilter.java -text
 api/src/org/labkey/api/study/Location.java -text
 api/src/org/labkey/api/study/ParticipantCategory.java -text
 api/src/org/labkey/api/study/ParticipantVisit.java -text
