Switch @RequiresPermissionClass to take a single permissions class (previous "multiple permissions" support resulted in an OR operation, which wasn't obvious).
Add @RequiresAllOf and @RequiresAnyOf annotations to clearly document the intent.

Add @RequiresPermission and deprecate @RequiresPermissionClass -- we removed ACL-based annotations long ago, so the "Class" distinction is no longer needed. But we'll keep @RequiresPermissionClass around for a long time...

--- a/.gitattributes
+++ b/.gitattributes
@@ -1262,8 +1262,11 @@ api/src/org/labkey/api/security/NestedGroupsTest.java -text
 api/src/org/labkey/api/security/PasswordExpiration.java -text
 api/src/org/labkey/api/security/PrincipalType.java -text
 api/src/org/labkey/api/security/ProjectAndSiteGroupsCache.java -text
+api/src/org/labkey/api/security/RequiresAllOf.java -text
+api/src/org/labkey/api/security/RequiresAnyOf.java -text
 api/src/org/labkey/api/security/RequiresLogin.java -text
 api/src/org/labkey/api/security/RequiresNoPermission.java -text
+api/src/org/labkey/api/security/RequiresPermission.java -text
 api/src/org/labkey/api/security/RequiresPermissionClass.java -text
 api/src/org/labkey/api/security/RequiresSiteAdmin.java -text
 api/src/org/labkey/api/security/RoleAssignment.java -text
