--- a/.gitattributes
+++ b/.gitattributes
@@ -7633,6 +7633,40 @@ internal/webapp/internal/ViewDesigner/tab/ColumnsTab.js -text
 internal/webapp/internal/ViewDesigner/tab/FilterTab.js -text
 internal/webapp/internal/ViewDesigner/tab/SortTab.js -text
 internal/webapp/internal/ViewDesigner/ux/ComponentDataView.js -text
+internal/webapp/internal/font-awesome-4.4.0/css/font-awesome.css -text
+internal/webapp/internal/font-awesome-4.4.0/css/font-awesome.min.css -text
+internal/webapp/internal/font-awesome-4.4.0/fonts/FontAwesome.otf -text
+internal/webapp/internal/font-awesome-4.4.0/fonts/fontawesome-webfont.eot -text
+internal/webapp/internal/font-awesome-4.4.0/fonts/fontawesome-webfont.svg -text
+internal/webapp/internal/font-awesome-4.4.0/fonts/fontawesome-webfont.ttf -text
+internal/webapp/internal/font-awesome-4.4.0/fonts/fontawesome-webfont.woff -text
+internal/webapp/internal/font-awesome-4.4.0/fonts/fontawesome-webfont.woff2 -text
+internal/webapp/internal/font-awesome-4.4.0/less/animated.less -text
+internal/webapp/internal/font-awesome-4.4.0/less/bordered-pulled.less -text
+internal/webapp/internal/font-awesome-4.4.0/less/core.less -text
+internal/webapp/internal/font-awesome-4.4.0/less/fixed-width.less -text
+internal/webapp/internal/font-awesome-4.4.0/less/font-awesome.less -text
+internal/webapp/internal/font-awesome-4.4.0/less/icons.less -text
+internal/webapp/internal/font-awesome-4.4.0/less/larger.less -text
+internal/webapp/internal/font-awesome-4.4.0/less/list.less -text
+internal/webapp/internal/font-awesome-4.4.0/less/mixins.less -text
+internal/webapp/internal/font-awesome-4.4.0/less/path.less -text
+internal/webapp/internal/font-awesome-4.4.0/less/rotated-flipped.less -text
+internal/webapp/internal/font-awesome-4.4.0/less/stacked.less -text
+internal/webapp/internal/font-awesome-4.4.0/less/variables.less -text
+internal/webapp/internal/font-awesome-4.4.0/scss/_animated.scss -text
+internal/webapp/internal/font-awesome-4.4.0/scss/_bordered-pulled.scss -text
+internal/webapp/internal/font-awesome-4.4.0/scss/_core.scss -text
+internal/webapp/internal/font-awesome-4.4.0/scss/_fixed-width.scss -text
+internal/webapp/internal/font-awesome-4.4.0/scss/_icons.scss -text
+internal/webapp/internal/font-awesome-4.4.0/scss/_larger.scss -text
+internal/webapp/internal/font-awesome-4.4.0/scss/_list.scss -text
+internal/webapp/internal/font-awesome-4.4.0/scss/_mixins.scss -text
+internal/webapp/internal/font-awesome-4.4.0/scss/_path.scss -text
+internal/webapp/internal/font-awesome-4.4.0/scss/_rotated-flipped.scss -text
+internal/webapp/internal/font-awesome-4.4.0/scss/_stacked.scss -text
+internal/webapp/internal/font-awesome-4.4.0/scss/_variables.scss -text
+internal/webapp/internal/font-awesome-4.4.0/scss/font-awesome.scss -text
 internal/webapp/internal/jQuery.lib.xml -text
 internal/webapp/internal/jQuery/jquery-1.11.2.js -text
 internal/webapp/internal/jQuery/jquery-1.11.2.min.js -text
