--- a/.gitattributes
+++ b/.gitattributes
@@ -1857,6 +1857,7 @@ query/webapp/query/ExportTablePanel.js -text
 query/webapp/query/QueryEditorPanel.js -text
 query/webapp/query/browser.lib.xml -text
 query/webapp/query/browser/Browser.js -text
+query/webapp/query/browser/Button.js -text
 query/webapp/query/browser/Caches.js -text
 query/webapp/query/browser/Tree.js -text
 query/webapp/query/browser/view/Base.js -text
