--- a/cas/module.properties
+++ b/cas/module.properties
@@ -1,7 +1,9 @@
 ModuleClass: org.labkey.cas.CasModule
-Label: FIXME! Capitalized Short Module Summary
-Description: FIXME! Write a paragraph describing the functionality and the \
-    purpose of this module. The description should contain multiple scentences.
-URL: http://example.com/FIXME
+Label: CAS SSO Authentication Service
+Description: User authentication service through CAS single sign-on protocol.
+URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=authenticationModule
+Maintainer: Adam Rauch <adamr@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
 License: Apache 2.0
 LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
