--- a/duo/module.properties
+++ b/duo/module.properties
@@ -1,7 +1,10 @@
 ModuleClass: org.labkey.duo.DuoModule
-Label: FIXME! Capitalized Short Module Summary
-Description: FIXME! Write a paragraph describing the functionality and the \
-    purpose of this module. The description should contain multiple scentences.
-URL: http://example.com/FIXME
+Label: Duo Authentication Service
+Description: User authentication service through Duo two-factor authentication.
+URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=authenticationModule
+Maintainer: Tony Galuhn <tgaluhn@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
 License: Apache 2.0
 LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
+
