--- a/oauth/module.properties
+++ b/oauth/module.properties
@@ -1,7 +1,9 @@
 ModuleClass: org.labkey.oauth.OAuthModule
-Label: FIXME! Capitalized Short Module Summary
-Description: FIXME! Write a paragraph describing the functionality and the \
-    purpose of this module. The description should contain multiple scentences.
-URL: http://example.com/FIXME
+Label: OAuth Authentication Service
+Description: User authentication service through OAuth.
+URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=authenticationModule
+Maintainer: Matthew Bellew <matthewb@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
 License: Apache 2.0
 LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
