Let dialects wrap and override JDBC DatabaseMetaData implementations. Override jTDS getTables() method, querying INFORMATION_SCHEMA.TABLES directly... which is about 50X faster.
Together with previous commit, this speeds up server startup by a few seconds and SQL Server bootstrap by 50s.

--- a/.gitattributes
+++ b/.gitattributes
@@ -267,6 +267,7 @@ api/src/org/labkey/api/data/CrosstabTableInfo.java -text
 api/src/org/labkey/api/data/DataIteratorResultsImpl.java -text
 api/src/org/labkey/api/data/DataRegionSelection.java -text
 api/src/org/labkey/api/data/DatabaseCache.java -text
+api/src/org/labkey/api/data/DatabaseMetaDataWrapper.java -text
 api/src/org/labkey/api/data/DatabaseTableType.java -text
 api/src/org/labkey/api/data/DbSchemaCache.java -text
 api/src/org/labkey/api/data/DbSchemaType.java -text
