Fix my email address

--- a/bigiron/module.properties
+++ b/bigiron/module.properties
@@ -3,7 +3,7 @@ Label: Additional Database Support
 Description: Support for using Microsoft SQLServer as LabKey Server's \
     backend database and allows connecting to Oracle, SAS, and MySQL \
     as an external data source.
-Maintainer: Adam Rauch <adamr@labkey.com>
+Maintainer: Adam Rauch <adam@labkey.com>
 Organization: LabKey Software
 OrganizationURL: https://www.labkey.com/
 License: Apache 2.0
