--- a/cas/module.properties
+++ b/cas/module.properties
@@ -2,7 +2,7 @@ ModuleClass: org.labkey.cas.CasModule
 Label: CAS SSO Authentication Service
 Description: User authentication service through CAS single sign-on protocol.
 URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=authenticationModule
-Maintainer: Adam Rauch <adamr@labkey.com>
+Maintainer: Adam Rauch <adam@labkey.com>
 Organization: LabKey Software
 OrganizationURL: https://www.labkey.com/
 License: Apache 2.0
