Spec #23797: updates from code review and API review feedback - add some additional fields to the core.Notifications table - allow a notification to be marked as read, but not removed

--- a/.gitattributes
+++ b/.gitattributes
@@ -192,6 +192,7 @@ core/resources/schemas/dbscripts/postgresql/core-13.30-14.10.sql -text
 core/resources/schemas/dbscripts/postgresql/core-14.20-14.30.sql -text
 core/resources/schemas/dbscripts/postgresql/core-14.30-15.10.sql -text
 core/resources/schemas/dbscripts/postgresql/core-15.20-15.21.sql -text
+core/resources/schemas/dbscripts/postgresql/core-15.21-15.22.sql -text
 core/resources/schemas/dbscripts/postgresql/core-create.sql -text
 core/resources/schemas/dbscripts/postgresql/core-drop.sql -text
 core/resources/schemas/dbscripts/postgresql/labkey-0.00-13.30.sql -text
@@ -225,6 +226,7 @@ core/resources/schemas/dbscripts/sqlserver/core-13.30-14.10.sql -text
 core/resources/schemas/dbscripts/sqlserver/core-14.20-14.30.sql -text
 core/resources/schemas/dbscripts/sqlserver/core-14.30-15.10.sql -text
 core/resources/schemas/dbscripts/sqlserver/core-15.20-15.21.sql -text
+core/resources/schemas/dbscripts/sqlserver/core-15.21-15.22.sql -text
 core/resources/schemas/dbscripts/sqlserver/core-create.sql -text
 core/resources/schemas/dbscripts/sqlserver/core-drop.sql -text
 core/resources/schemas/dbscripts/sqlserver/group_concat_install.sql -text
