Issue 19104: **Selection in file browser changes row height

--- a/.gitattributes
+++ b/.gitattributes
@@ -924,6 +924,7 @@ filecontent/src/org/labkey/filecontent/view/files.jsp -text
 filecontent/src/org/labkey/filecontent/view/iframe.jsp -text
 filecontent/webapp/ActionsAdmin.js -text
 filecontent/webapp/File.lib.xml -text
+filecontent/webapp/File/FileContent.css -text
 filecontent/webapp/File/data/Pipeline.js -text
 filecontent/webapp/File/data/webdav/Proxy.js -text
 filecontent/webapp/File/data/webdav/Response.js -text
