Spec 24340: update license value in module.properties of Premium modules

--- a/freezerpro/module.properties
+++ b/freezerpro/module.properties
@@ -6,5 +6,4 @@ URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=freezerpro
 Maintainer: Karl Lum <klum@labkey.com>
 Organization: LabKey Software
 OrganizationURL: https://www.labkey.com/
-License: Apache 2.0
-LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
+License: LabKey Software License
