--- a/oauth/module.properties
+++ b/oauth/module.properties
@@ -5,5 +5,4 @@ URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=authenticatio
 Maintainer: Matthew Bellew <matthewb@labkey.com>
 Organization: LabKey Software
 OrganizationURL: https://www.labkey.com/
-License: Apache 2.0
-LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
+License: LabKey Software License
