--- a/synonym/module.properties
+++ b/synonym/module.properties
@@ -1,4 +1,3 @@
 ModuleClass: org.labkey.synonym.SynonymModule
 Label: Support for SQL Server synonyms
-License: Apache 2.0
-LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
+License: LabKey Software License
