--- a/duo/module.properties
+++ b/duo/module.properties
@@ -5,6 +5,5 @@ URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=authenticatio
 Maintainer: Tony Galuhn <tgaluhn@labkey.com>
 Organization: LabKey Software
 OrganizationURL: https://www.labkey.com/
-License: Apache 2.0
-LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
+License: LabKey Software License
 
