--- a/redcap/module.properties
+++ b/redcap/module.properties
@@ -9,5 +9,4 @@ URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=redCap
 Maintainer: Karl Lum <klum@labkey.com>
 Organization: LabKey Software
 OrganizationURL: https://www.labkey.com/
-License: Apache 2.0
-LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
+License: LabKey Software License
