--- a/.gitattributes
+++ b/.gitattributes
@@ -1687,6 +1687,7 @@ query/src/org/labkey/query/persist/CustomViewCache.java -text
 query/src/org/labkey/query/persist/ExternalSchemaDef.java -text
 query/src/org/labkey/query/persist/LinkedSchemaDef.java -text
 query/src/org/labkey/query/persist/QueryDef.java -text
+query/src/org/labkey/query/persist/QueryDefCache.java -text
 query/src/org/labkey/query/persist/QueryManager.java -text
 query/src/org/labkey/query/persist/QuerySnapshotCache.java -text
 query/src/org/labkey/query/persist/QuerySnapshotDef.java -text
