Drop array_accum() custom aggregate function from core and viability schemas. We stopped using this a while back, in favor of built-in PostgreSQL function string_to_array()

--- a/.gitattributes
+++ b/.gitattributes
@@ -194,6 +194,7 @@ core/resources/schemas/dbscripts/postgresql/core-14.30-15.10.sql -text
 core/resources/schemas/dbscripts/postgresql/core-15.20-15.21.sql -text
 core/resources/schemas/dbscripts/postgresql/core-15.20-15.30.sql -text
 core/resources/schemas/dbscripts/postgresql/core-15.21-15.22.sql -text
+core/resources/schemas/dbscripts/postgresql/core-15.30-15.31.sql -text
 core/resources/schemas/dbscripts/postgresql/core-create.sql -text
 core/resources/schemas/dbscripts/postgresql/core-drop.sql -text
 core/resources/schemas/dbscripts/postgresql/labkey-0.00-13.30.sql -text
