--- a/.gitattributes
+++ b/.gitattributes
@@ -224,6 +224,7 @@ api/src/org/labkey/api/data/AbstractParticipantGroup.java -text
 api/src/org/labkey/api/data/AbstractPropertyStore.java -text
 api/src/org/labkey/api/data/AbstractSelectorTestCase.java -text
 api/src/org/labkey/api/data/AbstractTableInfo.java -text
+api/src/org/labkey/api/data/ActivityService.java -text
 api/src/org/labkey/api/data/Aggregate.java -text
 api/src/org/labkey/api/data/AggregateColumnInfo.java -text
 api/src/org/labkey/api/data/AsyncQueryRequest.java -text
